fix: new label text color in dark mode

--- a/src/styles/custom-properties/colors.scss
+++ b/src/styles/custom-properties/colors.scss
@@ -285,7 +285,7 @@
     // Elements that rely on Bulma defaults in light mode but
     // need to be overriden in dark mode
     --input-placeholder-color: hsla(var(--grey-900-hsl), 0.6);
-    --tag-color: var(--grey-50);
+    --tag-color: var(--grey-800);
     --table-row-hover-background-color: var(--grey-100);
     --dropdown-item-hover-background-color: var(--grey-100);
     --dropdown-item-hover-color: var(--text);
